src/objects/Bank_Details__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Details</relationshipLabel>
        <relationshipName>Bank_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Bank_Account__c</fullName>
        <label>Approval Bank Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Bank_Country__c</fullName>
        <label>Approval Bank Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_BankCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Bank_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Bank Key</label>
        <referenceTo>Bank_Key__c</referenceTo>
        <relationshipLabel>Bank Details (Approval Bank Key)</relationshipLabel>
        <relationshipName>Bank_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Collection_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Collection Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Control_Key__c</fullName>
        <label>Approval Control Key</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_IBAN__c</fullName>
        <label>Approval IBAN</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bank_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <label>Bank Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Country__c</fullName>
        <label>Bank Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_BankCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Key</label>
        <referenceTo>Bank_Key__c</referenceTo>
        <relationshipLabel>Bank Details</relationshipLabel>
        <relationshipName>Bank_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Authorization_Formula__c</fullName>
        <formula>IF(Collection_authorization__c = true, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Collection Authorization Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collection authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Key__c</fullName>
        <label>Control Key</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exclude_Weekends__c</fullName>
        <formula>CASE( 
MOD( Sent_for_Approval_Date__c - DATE( 1900, 1, 7 ), 7 ), 
3, Sent_for_Approval_Date__c + 2 + 3, 
4, Sent_for_Approval_Date__c + 2 + 3, 
5, Sent_for_Approval_Date__c + 2 + 3, 
6, Sent_for_Approval_Date__c + 1 + 3, 
Sent_for_Approval_Date__c + 3 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Weekends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_SAP__c</fullName>
        <formula>CASESAFEID(Account__r.Id) &amp; 
IF(ISBLANK(TEXT(Updated_Bank_Country__c)), TEXT(Bank_Country__c), TEXT(Updated_Bank_Country__c)) &amp; 
IF(ISBLANK(Updated_Bank_Key__c),  Bank_Key__r.Bank_Number__c , Updated_Bank_Key__r.Bank_Number__c ) &amp; 
IF(ISBLANK(Updated_Bank_Account__c), Bank_Account__c, Updated_Bank_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finance_Controller_BD_Validation_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Controller BD Validation 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bank_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Controller_BD_Validation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Controller BD Validation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bank_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkToRecord__c</fullName>
        <label>LinkToRecord</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rebate_Payout__c</fullName>
        <label>Rebate Payout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>REB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_to_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject to Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_PO_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP PO Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>TEXT(Account__r.Sales_Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_for_Approval_Date__c</fullName>
        <label>Sent for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated_Bank_Account__c</fullName>
        <label>Updated Bank Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Bank_Country__c</fullName>
        <label>Updated Bank Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_BankCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Bank_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Updated Bank Key</label>
        <referenceTo>Bank_Key__c</referenceTo>
        <relationshipLabel>Bank Details (Updated Bank Key)</relationshipLabel>
        <relationshipName>Bank_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updated_Collection_Authorization_Formula__c</fullName>
        <formula>IF(Updated_Collection_Authorization__c = true, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Collection Authorization Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Collection_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated Collection Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_Collection_Authorizations__c</fullName>
        <label>Updated Collection Authorization</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Control_Key__c</fullName>
        <label>Updated Control Key</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_IBAN__c</fullName>
        <label>Updated IBAN</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Request_Validation__c</fullName>
        <label>Update Request Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_RequestValidation</valueSetName>
        </valueSet>
    </fields>
    <label>Bank Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank_Account__c</columns>
        <columns>Bank_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD{0000000000}</displayFormat>
        <label>Bank Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bank_account_and_Bank_Key</fullName>
        <active>true</active>
        <description>Bank Key and bank account are dependent to each other</description>
        <errorConditionFormula>AND(
		$Setup.ValidationRulesSettings__c.BankDetailValidationRule__c, ISNEW(), 
		OR(
			AND(ISBLANK(Approval_Bank_Account__c), 
			   OR(NOT(ISBLANK( Approval_Bank_Key__c )) || NOT(ISBLANK( Bank_Key__c)))
			), 
			AND(ISBLANK(Approval_Bank_Key__c), 
			   OR(NOT(ISBLANK(Bank_Account__c)), NOT(ISBLANK( Approval_Bank_Account__c)))
			)
		)
	)</errorConditionFormula>
        <errorMessage>Please fill in both Bank Account and Bank Key</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Creation_Not_Allowed_on_Prospect</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 $Setup.ValidationRulesSettings__c.BankDetailValidationRule__c, 
 ISNEW(),
  ISBLANK(Account__r.SAP_Customer_ID__c)
)</errorConditionFormula>
        <errorMessage>You can only create bank details on Accounts which have a valid SAP Customer ID. Please try again after promoting the Account to SAP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IBAN</fullName>
        <active>true</active>
        <description>IBAN is mandatory if bank key and bank account not filled in</description>
        <errorConditionFormula>AND( 
$Setup.ValidationRulesSettings__c.BankDetailValidationRule__c, ISNEW(), ISBLANK(Approval_IBAN__c), ISBLANK(Approval_Bank_Account__c), ISBLANK(Approval_Bank_Key__c)
)</errorConditionFormula>
        <errorMessage>Please fill in IBAN or Bank Key and Bank Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.BankDetailValidationRule__c, 
OR( AND(NOT(ISBLANK( PRIORVALUE(Approval_Bank_Account__c))), ISCHANGED(Approval_Bank_Account__c)), 
    AND(NOT(ISBLANK( PRIORVALUE(Approval_Bank_Country__c))),ISCHANGED(Approval_Bank_Country__c)), 
    AND(NOT(ISBLANK( PRIORVALUE(Approval_Bank_Key__c))),ISCHANGED(Approval_Bank_Key__c)), 
    AND(PRIORVALUE(Approval_Collection_Authorization__c) == true, Approval_Collection_Authorization__c= false), 
    AND(NOT(ISBLANK( PRIORVALUE(Approval_Control_Key__c))),ISCHANGED(Approval_Control_Key__c)),
    AND(NOT(ISBLANK( PRIORVALUE(Approval_IBAN__c))),ISCHANGED(Approval_IBAN__c))
), 
ISPICKVAL(Updated_Request_Validation__c , &apos;Approval Pending&apos;))</errorConditionFormula>
        <errorMessage>An Approval is already in progress. Please do not request for a change. If needed recall existing approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SapValidationInProgress</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 $Setup.ValidationRulesSettings__c.AccountValidationRules__c, $Profile.Name &lt;&gt; $Label.JDE_Integ_Sap, 
 ISPICKVAL(Updated_Request_Validation__c, &quot;Approval Validated&quot;),
OR(
NOT(ISBLANK(Updated_Bank_Account__c)),
NOT(ISPICKVAL(Updated_Bank_Country__c, &quot;&quot;)),
NOT(ISBLANK(Updated_Control_Key__c)),
NOT(ISBLANK(Updated_Bank_Key__c))
)
)</errorConditionFormula>
        <errorMessage>There is currently a SAP validation in progress!</errorMessage>
    </validationRules>
</CustomObject>